More nave responsiveness fixes - no wrap, decrease font size

--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -11,7 +11,6 @@
 
   ul {
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
   }
 }
@@ -22,8 +21,17 @@
   font-weight: bold;
 
   @media screen and (max-width: $stacking-breakpoint) {
-    padding-left: 4px;
-    padding-right: 4px;
+    font-size: 16px;
+    padding-left: 6px;
+    padding-right: 6px;
+  }
+
+  &:first-child {
+    padding-left: 0;
+  }
+
+  &:last-child {
+    padding-right: 0;
   }
 }
 
